--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node --watch ."
+    "dev": "node --watch ./servidor.js"
   },
   "keywords": [],
   "author": "",
